cluster/apps/datasci/jupyterhub/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-jupyterhub
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`jupyterhub.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        # - name: basicauth
        - name: crowdsec-traefik-bouncer
        - name: rfc1918
      services:
        - name: jupyterhub
          namespace: datasci
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "{SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
